@@ -8,11 +8,10 @@ load => res_agi.so                     	; Asterisk Gateway Interface (AGI)
 load => res_musiconhold.so       		; Music On Hold Resource 
 load => res_timing_timerfd.so			; Timerfd Timing Interface
 load => res_rtp_asterisk.so				; Asterisk RTP Stack
+load => res_jabber.so					; AJI - Asterisk Jabber Interface
 
 ;  PBX -- 
-;load => pbx_ael.so                     ; Asterisk Extension Language Compiler - Requires ?
 load => pbx_config.so                  	; Text Extension Configuration  Requires N/A 
-;load => pbx_dundi.so                   ; Do a DUNDi lookup of a phone number. - Requires res_crypto.so 
 ;load => pbx_functions.so               ; Builtin dialplan functions - Requires N/A 
 ;load => pbx_loopback.so                ; Loopback Dialplan Switch - Requires N/A 
 load => pbx_realtime.so                	; Realtime Dialplan Switch -  Requires N/A 
@@ -45,7 +44,7 @@ load => func_extstate.so				; Gets an extension's state in the dialplan
 load => chan_iax2.so            		; Inter Asterisk eXchange (Ver 2) - Requires res_crypto.so, res_features.so 
 load => chan_local.so           		; Show status of local channels-  Requires N/A 
 ;load => chan_mgcp.so           		; Media Gateway Control Protocol (MGCP) - Requires res_features.so 
-;load => chan_gtalk.so           		; 
+load => chan_gtalk.so           		; Gtalk Channel Driver
 ;load => chan_oss.so            		; OSS Console Channel Driver - Requires N/A 
 ;load => chan_phone.so          		; Linux Telephony API Support - Requires N/A 
 load => chan_sip.so             		; Session Initiation Protocol (SIP) -  Requires res_features.so 
